[project]
name = "prompt-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformer-lens>=3.2.1",
    "transformers>=5.8.1",
]
